// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse webhook event errors if the metadata can not be parsed 1`] = `"Failed parsing metadata: Invalid authentication tag length: 0"`;

exports[`parse webhook event errors if the webhook signature can not be validated 1`] = `"Failed validating webhook event body"`;

exports[`parse webhook event parses a "payment refunded" event correctly 1`] = `
Object {
  "amount": 414.43,
  "balanceCurrency": "USD",
  "balanceEarningsDecrease": 0.34,
  "balanceFeeRefund": 0.11,
  "balanceGrossRefund": 0.28,
  "balanceTaxRefund": 0.96,
  "checkoutId": "9-a568055ec8edc7b-e57313c2c0",
  "currency": "EUR",
  "customerEmail": "foo@bar.com",
  "earningsDecrease": 0.08,
  "eventId": 123456789,
  "eventTime": 2020-08-12T21:01:30.000Z,
  "eventType": "PAYMENT_REFUNDED",
  "feeRefund": 0.86,
  "grossRefund": 0.61,
  "hasMarketingConsent": true,
  "metadata": Object {
    "foo": "bar",
  },
  "orderId": "8",
  "quantity": 68,
  "refundReason": "Example Reason",
  "refundType": "FULL",
  "taxRefund": 0.76,
}
`;

exports[`parse webhook event parses a "payment succeeded" event correctly 1`] = `
Object {
  "balanceCurrency": "USD",
  "balanceEarnings": 317.23,
  "balanceFee": 875.73,
  "balanceGross": 800.96,
  "balanceTax": 412.02,
  "checkoutId": "9-656d6c95693cd5b-77ea2a55f9",
  "coupon": "Coupon 9",
  "currency": "EUR",
  "customerCountry": "AU",
  "customerEmail": "foo@bar.com",
  "customerName": "Customer Name",
  "earnings": 140.26,
  "eventId": 123456789,
  "eventTime": 2020-08-12T21:01:30.000Z,
  "eventType": "PAYMENT_SUCCEEDED",
  "fee": 0.75,
  "gross": 804.76,
  "hasMarketingConsent": true,
  "metadata": Object {
    "foo": "bar",
  },
  "orderId": "3",
  "paymentMethod": "PAYPAL",
  "productId": "4",
  "productName": "Example Product Name",
  "quantity": 77,
  "receiptUrl": "https://my.paddle.com/receipt/5/2fe1b313345427e-2e6b05993f",
  "tax": 0.48,
  "usedPriceOverride": true,
}
`;

exports[`parse webhook event parses a "subscription cancelled" event correctly 1`] = `
Object {
  "cancelledFrom": 2020-08-12T00:00:00.000Z,
  "checkoutId": "1-25b286e64f4a228-65f3aadbbb",
  "currency": "GBP",
  "customerEmail": "monroe84@example.com",
  "customerId": 5,
  "eventId": 1523571645,
  "eventTime": 2020-08-12T02:13:06.000Z,
  "eventType": "SUBSCRIPTION_CANCELLED",
  "hasMarketingConsent": false,
  "metadata": Object {
    "foo": "bar",
  },
  "price": 464.07,
  "productId": 5,
  "quantity": 93,
  "status": "CANCELLED",
  "subscriptionId": 8,
  "unitPrice": 4.99,
}
`;

exports[`parse webhook event parses a "subscription created" event correctly 1`] = `
Object {
  "cancelUrl": "https://checkout.paddle.com/subscription/cancel?user=6&subscription=1&hash=acb15fc760b9d4cb4fae9abf67b7b4d52f12441e",
  "checkoutId": "2-461ecbe710cab0e-f2e284ef00",
  "currency": "GBP",
  "customerEmail": "gordon35@example.org",
  "customerId": 9,
  "eventId": 2091557455,
  "eventTime": 2020-08-09T22:11:09.000Z,
  "eventType": "SUBSCRIPTION_CREATED",
  "hasMarketingConsent": true,
  "metadata": Object {
    "foo": "bar",
  },
  "nextPaymentDate": 2020-09-03T00:00:00.000Z,
  "price": 229.77,
  "productId": 7,
  "quantity": 23,
  "referrerUrl": "https://genesis.devoxa.io/",
  "status": "TRIALING",
  "subscriptionId": 6,
  "unitPrice": 9.99,
  "updateUrl": "https://checkout.paddle.com/subscription/update?user=3&subscription=3&hash=ce39e713407ccffbc867dba87e39e88324114274",
}
`;

exports[`parse webhook event parses a "subscription payment succeeded" event correctly 1`] = `
Object {
  "balanceCurrency": "GBP",
  "balanceEarnings": 233.34,
  "balanceFee": 812.01,
  "balanceGross": 915.81,
  "balanceTax": 865.97,
  "checkoutId": "8-329f6daa7e07bf2-5793a78be0",
  "coupon": "COUPON_CODE",
  "currency": "EUR",
  "customerCountry": "FR",
  "customerEmail": "dietrich.karlie@example.com",
  "customerId": 6,
  "customerName": "Ela Example",
  "earnings": 432.01,
  "eventId": 507897344,
  "eventTime": 2020-08-12T21:01:30.000Z,
  "eventType": "SUBSCRIPTION_PAYMENT_SUCCEEDED",
  "fee": 0.24,
  "gross": 900.3,
  "hasMarketingConsent": true,
  "installments": 9,
  "isInitialPayment": true,
  "metadata": Object {
    "foo": "bar",
  },
  "nextPaymentAmount": 4.99,
  "nextPaymentDate": 2020-08-20T00:00:00.000Z,
  "orderId": "4",
  "paymentMethod": "PAYPAL",
  "price": 174.65,
  "productId": 1,
  "quantity": 35,
  "receiptUrl": "https://my.paddle.com/receipt/5/7dce0d96bae94f3-9bb70f9885",
  "status": "ACTIVE",
  "subscriptionId": 4,
  "subscriptionPaymentId": 4,
  "tax": 0.48,
  "unitPrice": 4.99,
}
`;

exports[`parse webhook event parses a "subscription updated (paused)" event correctly 1`] = `
Object {
  "cancelUrl": "https://checkout.paddle.com/subscription/cancel?user=7&subscription=1&hash=539134462da7ff8bce9581704ff3f462994caf05",
  "checkoutId": "6-1d95a8cd27317a6-f8810efc48",
  "currency": "USD",
  "customerEmail": "rconnelly@example.org",
  "customerId": 3,
  "eventId": 1251568959,
  "eventTime": 2020-08-12T02:12:03.000Z,
  "eventType": "SUBSCRIPTION_UPDATED",
  "hasMarketingConsent": true,
  "metadata": Object {
    "foo": "bar",
  },
  "nextPaymentDate": 2020-09-04T00:00:00.000Z,
  "oldNextPaymentDate": 2020-08-02T00:00:00.000Z,
  "oldPrice": 4.99,
  "oldProductId": 2,
  "oldQuantity": 1,
  "oldStatus": "TRIALING",
  "oldUnitPrice": 4.99,
  "pausedAt": 2020-01-01T12:13:14.000Z,
  "pausedFrom": 2020-02-01T12:13:14.000Z,
  "pausedReason": "DELINQUENT",
  "price": 19.98,
  "productId": 3,
  "quantity": 2,
  "status": "ACTIVE",
  "subscriptionId": 1,
  "unitPrice": 9.99,
  "updateUrl": "https://checkout.paddle.com/subscription/update?user=7&subscription=9&hash=89fc4d8da91884f626157cc6095dc857510a1d21",
}
`;

exports[`parse webhook event parses a "subscription updated" event correctly 1`] = `
Object {
  "cancelUrl": "https://checkout.paddle.com/subscription/cancel?user=7&subscription=1&hash=539134462da7ff8bce9581704ff3f462994caf05",
  "checkoutId": "6-1d95a8cd27317a6-f8810efc48",
  "currency": "USD",
  "customerEmail": "rconnelly@example.org",
  "customerId": 3,
  "eventId": 1251568959,
  "eventTime": 2020-08-12T02:12:03.000Z,
  "eventType": "SUBSCRIPTION_UPDATED",
  "hasMarketingConsent": true,
  "metadata": Object {
    "foo": "bar",
  },
  "nextPaymentDate": 2020-09-04T00:00:00.000Z,
  "oldNextPaymentDate": 2020-08-02T00:00:00.000Z,
  "oldPrice": 4.99,
  "oldProductId": 2,
  "oldQuantity": 1,
  "oldStatus": "TRIALING",
  "oldUnitPrice": 4.99,
  "pausedAt": null,
  "pausedFrom": null,
  "pausedReason": null,
  "price": 19.98,
  "productId": 3,
  "quantity": 2,
  "status": "ACTIVE",
  "subscriptionId": 1,
  "unitPrice": 9.99,
  "updateUrl": "https://checkout.paddle.com/subscription/update?user=7&subscription=9&hash=89fc4d8da91884f626157cc6095dc857510a1d21",
}
`;
